Pending changes exported from your codespace

--- a/pages/page12.html
+++ b/pages/page12.html
@@ -1,19 +1,17 @@
 <div class="book-content">
 
 <p class="no-indent">
-much so that he skipped the 5th grade and went straight to middle school, namely Crittenden Middle School. It was in a poor area. Most kids did not work much there, they were rather fond of bullying other kids, such as the young Steve. One day he came home and declared that if he wasn’t transferred to another school, he would stop going to school altogether. He was 11. Paul and Clara complied, and the Jobses moved to the cozier city of Los Altos, so that Steve could go to Cupertino Junior High. This proved to be decisive for Steve’s future.
-</p>
 
+</p>
 <p>
-As Steve was growing up in Los Altos, he became increasingly curious about the world of electronics that filled his neighbors’ garages. His own
-father introduced him to Heathkits, which fascinated him.
+Graceful as a swan in flight,
+	In her world, everything feels right.
+
 </p>
 
-<h2>Homestead High</h2>
 
-<p>
-When Steve arrived in Homestead High School, he enrolled in a popular electronics class. His teacher was
-</p>
+
+<img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/Copy%20of%20august%20(Poster%20(X-Large%20Landscape))%20(34).png?v=1709083468391" style="width:100%">
 
 </div>
 <span class="page-number">12</span>
