--- a/pages/page15.html
+++ b/pages/page15.html
@@ -1,15 +1,10 @@
 <div class="book-content">
 
-<p class="no-indent">
- hackers that managed to build “blue boxes” — little devices that fooled AT&T’s long-distance switching equipment, and allowed you to make phone calls for free.
-</p>
-
-<p>
-
-Woz read about them in an article which he showed to Steve. 
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/highschool2.jpg" width="172" height="214">
-They both tried to build one, and to their surprise, it worked! It was Steve who came up with the idea of selling them; he and Woz would go from room to room in Berkeley’s dorms, where Woz was a student, and sell them to interested students. However, this business was illegal and the two of them stopped after they almost got caught by the police.
-</p>
+<blockquote>
+    Her spirit, with love abound,
+    Tatiana, forever profound.</blockquote>
+    
+    <img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/Copy%20of%20august%20(Poster%20(X-Large%20Landscape))%20(30).png?v=1709083430531" style="width:70%">
 
 </div>
 <span class="page-number">15</span>
