--- a/pages/page17.html
+++ b/pages/page17.html
@@ -2,13 +2,14 @@
 
 
 <p class="no-indent">
-anymore. He also started his habit of fasting for long periods of time (he would still do so ten years later, when he was a multi-millionaire). He occasionally used LSD, and became something of a laggard hippie. One of his best friends at Reed was Dan Kottke, who shared his interests in such philosophies.
+    A friend to turn to in any case,
+    Tatiana, a gem in life's embrace.
+    
+    
 </p>
 
-<p>
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/collegue.jpg" width="172" height="129">
-The following year, in 1974, Steve desperately needed money, so he got a job at Atari. Atari was arguably the first video game company: it was created by Nolan Bushnell in 1972, and one of its ␣rst employees was Al Acorn, the inventor of Pong. Steve was hired although he would often call his co-workers names and smell pretty bad. That’s why he was soon moved to the night shift.
-</p>
+
+<img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/bright-loud-colors-calendar-2024(Folded%20Card%20(Landscape))%20(10).png?v=1709083232602" style="width:100%">
 
 
 </div>
