--- a/pages/page18.html
+++ b/pages/page18.html
@@ -1,27 +1,16 @@
 <div class="book-content">
 
 
-<h1>The Apple I</h1>
-
-
-<h2>Homebrew</h2>
-
-
-
-<p class="capital">
-While Steve had been away in India or Oregon, his geek friend Woz had
-been hired by Hewlett-Packard. To him, it was a dream job: a company full of passionate engineers just like him, where he could work on products for
-other engineers. However, in his spare time, he had cultivated his interest in designing computer circuits, and had joined a computer hobbyists
-association called the Homebrew Computer Club.
-</p>
-
-
 
 <p>
 
-Woz was impressed by the Altair (and by Microsoft’s BASIC interpreter), but
-he knew from his almost life-long experience in circuit design that he could do a much better job. So he started work on his own computer — which he
-decided to base on another
+With wisdom beyond her years,
+    She soothes all worries and fears,
+   
 </p>
+
+
+<img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/bright-loud-colors-calendar-2024(Folded%20Card%20(Landscape))%20(11).png?v=1709083233551" style="width:100%">
+
 </div>
 <span class="page-number">18</span>
