--- a/pages/page20.html
+++ b/pages/page20.html
@@ -2,19 +2,14 @@
 
 
 <p class="no-indent">
-Jobs. Steve was impressed. He did not know much about engineering, but he could see
-there was a demand for having a computer to write software for, a computer for software hobbyists. He was especially excited to see that a lot
-of the qualified engineers at Homebrew were talking about Woz’s computer with admiration. So he suggested to sell it to them. He and Woz would
-assemble the computers themselves and sell the whole board at Homebrew meetings.
-</p>
+    May her light forever glow,
+    In hearts where her kindness sow,
+   </p>
 
-<h2>“Our own company”</h2>
 
-<blockquote>
-Steve had a good argument. We were in his car and he said — and I can remember him saying this like it was yesterday: “Well, even if we lose money, we’ll have a company. For once in our lives, we’ll have a company.” That convinced me. And I was excited to think about us like that. To be two best friends starting a company.
-</blockquote>
 
-<cite>Steve Wozniak in iWoz</cite>
+
+   <img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/Copy%20of%20august%20(Poster%20(X-Large%20Landscape))%20(9).png?v=1709083345001" style="width:100%">
 
 </div>
 <span class="page-number">20</span>
