--- a/pages/page9.html
+++ b/pages/page9.html
@@ -1,16 +1,18 @@
 <div class="book-content">
 
 <p class="center-pic">
-	<img src="samples/steve-jobs/pics/books.jpg?p" style="width:350px; height:230px;">
+	<img src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/august%20(8).png?v=1709084263268" style="width:350px; height:330px;">
 </p>
 
-<p class="no-indent">
-of the iMac, iPod, iTunes, Apple Stores, and iPad.
-</p>
+<h1>
+	Tatiana, a beacon of light.
+	
+	
+	
+</h1>
 
 
 <p>
-Jobs' abrasive personality, which simultaneously inspired and intimidated those around him, is a recurrent theme throughout. Details of his personal life are also included, including early relationships, his marriage of twenty years, and his four children and his early life. 
-
+	
 </div>
 <span class="page-number">9</span>
