--- a/pages/page10.html
+++ b/pages/page10.html
@@ -1,22 +1,8 @@
 <div class="book-content">
-
-<h1>Youth</h1>
-
-<h2>The jobs family</h2>
-
-<p class="capital">
-Steve Jobs was born on February 24, 1955, in the city of San Francisco. His biological mother was an unwed graduate student named Joanne Simpson,
-and his biological father was either a political science or mathematics professor, a native Syrian named Abdulfattah John Jandali.
-</p>
-
-
-<p>
-Being born out of wedlock in the puritan America of the 1950s, the baby
-was put up for adoption. Joanne had a college education, and she insisted that the future parents of her boy be just as well educated. Unfortunately,
-the candidates, Paul and Clara Jobs, did not meet her expectations: they were a lower-middle class couple that had settled in the Bay Area after the
-war. Paul was a machinist from the Midwest who had
-</p>
-
-
+    Tatiana, a beacon of light,
+     Her presence shines so bright,
+	
+    <img src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/Copy%20of%20august%20(Poster%20(X-Large%20Landscape))%20(38).png?v=1709083486831" style="width:100%" class="responsive">
 </div>
-<span class="page-number">10</span>
+
+    <span class="page-number">10</span>
