--- a/pages/page11.html
+++ b/pages/page11.html
@@ -1,22 +1,20 @@
 <div class="book-content">
 
 <p class="no-indent">
-not even graduated from high school. In the end, Joanne agreed to have her baby adopted by
-them, under the firm condition that they later send him to college.
+    With a heart pure and true,
+    She paints the sky with a hue,
+   
+    
+
 </p>
 
-<p>
-Paul and Clara called their new son Steven Paul. While Steve was still a toddler, the couple moved to the Santa Clara county, later to be known as
-Silicon Valley. They adopted another baby, a girl called Patti, three years later in 1958.
-</p>
-
-<h2>Childhood</h2>
+<h2></h2>
 
 <p> 
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/young.jpg?" width="100" height="113">Steve was quite a turbulent child. He really didn’t care about school for
-some time — until he reached the 4th grade, and had Imogene “Teddy” Hill as a teacher.</p>
+<img class="left-pic zoom-this" src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/Copy%20of%20august%20(Poster%20(X-Large%20Landscape))%20(35).png?v=1709083472972" width="100" height="113">
+</p>
 
-<p>She did bribe him, with candy and $5 bills from her own money. He quickly became hooked — so</p>
+<p> </p>
 
 </div>
 <span class="page-number">11</span>
