--- a/pages/page19.html
+++ b/pages/page19.html
@@ -1,17 +1,16 @@
 <div class="book-content">
 
 <p class="center-pic">
-	<img src="samples/steve-jobs/pics/06.jpg" width="350" height="230">
+	<img src="https://cdn.glitch.global/822cb547-2562-4e40-939d-65ec1e8f2e5c/bright-loud-colors-calendar-2024(Folded%20Card%20(Landscape))%20(14).png?v=1709083238785" width="350" height="330">
 </p>
 
 <p class="no-indent">
-microprocessor, MOS’s Technology 502. This was his new goal in life. While keeping his job at HP, he worked very hard at
-this computer board, and came up with an impressive result; a powerful computer (for the time) which worked with a keyboard and screen, not one that flashed lights — and all with amazingly few chips.
-</p>
+	In her presence, all are peers,
+    Tatiana, a friend so dear.
+    
+   </p>
 
-<p>
-Woz showed his computer design to his friend Steve
-</p>
+   
 
 </div>
 <span class="page-number">19</span>
